# anikibot

./: .gitignore  Cargo.toml  README.md  TODO.md  a.ppga  bot.toml  commands.json  ppga.bat  ppga.sh  rustfmt.toml  script.dsl  start.bat  start.ps1  test.ppga
bot/src/: main.rs
bot/src/lib/: lib.rs
bot/src/lib/bot/: config.rs  macros.rs  mod.rs  util.rs
bot/src/lib/bot/command/: mod.rs
bot/src/lib/lua/: mod.rs  util.rs
bot/src/lib/stream_elements/: api.rs  channels.rs  communication.rs  config.rs  macros.rs  mod.rs  song_requests.rs
bot/src/lib/stream_elements/consumer/: channels.rs  mod.rs  song_requests.rs  stats.rs
bot/src/lib/stream_elements/stats/: mod.rs  settings.rs
bot/src/lib/youtube/: api.rs  communication.rs  consumer.rs  data.rs
bot2/: .gitignore  Cargo.toml  Config.example.toml  README.md
bot2/db_export/: export.sql
bot2/migrations/: 20210401173116_init.sql
bot2/src/: config.rs  db.rs  main.rs  util.rs  worker.rs
msg/: Cargo.toml
msg/src/: lib.rs
ppga-script/: README.md  grammar.EBNF  test.ppga  tour.ppga
ppga-script/ppga/: -  Cargo.toml  a.ppga
ppga-script/ppga/src/: main.rs  ppga.rs
ppga-script/ppga/src/lib/: config.rs  errors.rs  lib.rs  macros.rs
ppga-script/ppga/src/lib/codegen/: code_builder.rs  codegen.rs  mod.rs  snippets.rs
ppga-script/ppga/src/lib/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs
ppga-script/vscode-ppga/: README.md  package.json
ppga-script/vscode-ppga/syntaxes/: ppga.json
script/: Cargo.toml
script/src/: lib.rs
scripts/: ping.lua  song.lua  song.ppga  song.ppga.lua  test.lua  whoami.lua  whois.lua
scripts/ppga/: channel.ppga  channel.ppga.lua  mrgay.ppga  mrgay.ppga.lua  ping.ppga  ping.ppga.lua  song.ppga  song.ppga.lua  spank.ppga  spank.ppga.lua  stats.ppga  stats.ppga.lua  test.ppga  test.ppga.lua  whoami.ppga  whoami.ppga.lua
scripts/ppga/song/: queue.ppga  queue.ppga.lua
scripts/song/: queue.lua
scripts/test/: sub.lua
src/: main.rs  ppga.rs
src/lib/: lib.rs  methods.rs  secrets.rs  stream_elements.rs  youtube.rs
src/lib/bot/: command.rs  config.rs  lua_util.rs  macros.rs  mod.rs  util.rs
src/lib/bot/command/: mod.rs
src/lib/dsl/: ast.rs  code_builder.rs  codegen.rs  grammar.EBNF  lexer.rs  macros.rs  mod.rs  parser.rs  token.rs
src/lib/lua/: mod.rs  util.rs
src/lib/stream_elements/: api.rs  channels.rs  communication.rs  config.rs  macros.rs  mod.rs  song_requests.rs
src/lib/stream_elements/consumer/: channels.rs  mod.rs  song_requests.rs  stats.rs
src/lib/stream_elements/stats/: settings.rs  structs.rs  tz.rs
src/lib/youtube/: api.rs  communication.rs  config.rs  consumer.rs  data.rs  macros.rs  mod.rs
twitch/: Cargo.toml
twitch/examples/: anonymous.rs
twitch/src/: conn.rs  irc.rs  lib.rs  util.rs
twitch/src/tmi/: parse.rs  write.rs
twitch/twitch_getters/src/: lib.rs
twitch/twitch_getters/tests/: test.rs
vscode-ppga/: language-configuration.json
vscode-ppga/syntaxes/: ppga.json
