[package]
name = "anikibot"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"

[dependencies]
twitchchat = { version = "0.10.3" }
# reqwest = { version = "0.10.6", features = ["json"] } # may use this in the future to make API requests
config = "0.10.1"
tokio = { version = "0.2.21", features = ["rt-threaded", "macros"] }
