[package]
name = "anikibot"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"

[dependencies]
twitchchat = { version = "0.10.3" }
reqwest = { version = "0.10.6", features = ["json"] }
config = "0.10.1"
tokio = { version = "0.2.21", features = ["rt-threaded", "macros"] }
log = "0.4.8"
# Swap out with any of the supported loggers over here https://github.com/rust-lang/log
# if colors don't work on windows
pretty_env_logger = "0.4.0"  
serde_json = "1.0.55"

[lib]
name = "backend"
path = "src/lib/lib.rs"

[[bin]]
name = "aniki"
path = "src/main.rs"
