[package]
name = "anikibot"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"
default-run = "aniki"

[dependencies]
twitchchat = { version = "0.10.3" }
reqwest = { version = "0.10.6", features = ["json"] }
config = { version = "0.10.1" }
tokio = { version = "0.2.21", features = ["rt-threaded", "macros", "time"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
chrono = "0.4"
logos = "0.11.4"
mlua = { version = "0.4", features = ["async", "send", "lua53", "vendored"] }
lazy_static = "1.4.0"
better-panic = "0.2.0"
ppga = { git = "https://github.com/OptimalStrategy/ppga.git" }

[lib]
name = "backend"
path = "src/lib/lib.rs"

[[bin]]
name = "aniki"
path = "src/main.rs"
