[package]
name = "script"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#twitch = { path = "../twitch" }
#sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.16.1", features = ["full"] }
anyhow = "1.0.39"
reqwest = "0.11.2"
mlua = { version = "0.5.3", features = ["async", "send", "lua54", "vendored"] }
thiserror = "1.0.24"

[dev-dependencies]
tokio-test = "0.4.0"
alto_logger = "0.3.7"
